[package]
name = "nes-rs"
version = "0.1.0"
authors = ["syl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"
hexdump = "0.1.0"
enum_str = "0.1.2"